added the project

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,8 +44,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="w-75 m-auto">
-                        <h1 class="pb-3">Hi My Name Is Cristiano Ronaldo dos Santos Aveiro</h1>
-                        <h4 class="pb-4">In conclusion, mastering Ronaldo's skills can truly elevate your
+                        <h1 class="pb-3 text-white">Hi My Name Is Cristiano Ronaldo dos Santos Aveiro</h1>
+                        <h4 class="pb-4 text-white">In conclusion, mastering Ronaldo's skills can truly elevate your
                             football game to new heights. By understanding and practicing signature moves like the
                             Stepover Chop, Elastico, CR7 Fake Move, Ball Roll Chop, and CR7 Special, you can enhance
                             your technique and agility on the field.</h4>
@@ -69,7 +69,7 @@
                         later. He won three back-to-back Premier League titles in 2006-07, 2007-08, and 2008-09.</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="/portfolio/PICS/CR7 abt.jpg" alt="Ronaldo" class="img-fluid w-75" />
+                    <img src="/portfolio/PICS/Cp.webp" alt="Ronaldo" class="img-fluid w-75" />
 
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="card text-center">
-                        <img src="/portfolio/PICS/CR7 1.avif" class="card-img-top  pt-3 pb-5 "
+                        <img src="/portfolio/PICS/ronaldochop.jpg" class="card-img-top  pt-3 pb-5 "
                             alt="Ronaldo Ball Roll Chop">
                         <div class="card-body">
                             <h5 class="card-title"> Ball Roll Chop</h5>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center">
-                        <img src="/portfolio/PICS/CR7 2.webp" class="card-img-top pt-3 pb-5 "
+                        <img src="/portfolio/PICS/Ronaldo-Chop-image-2_1024x1024.webp" class="card-img-top pt-3 pb-5 "
                             alt="Ronaldo Stepover Chop">
                         <div class="card-body">
                             <h5 class="card-title">Stepover Chop</h5>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center">
-                        <img src="/portfolio/PICS/CR 7 3lo.jpg" class="card-img-top pt-3 pb-5 "
+                        <img src="/portfolio/PICS/BB.webp" class="card-img-top pt-3 pb-5 "
                             alt="Ronaldo Bicycle kick">
                         <div class="card-body">
                             <h5 class="card-title">Bicycle kick</h5>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card text-center">
-                        <img src="/portfolio/PICS/CR7 5..jpg" class="card-img-top pt-3 pb-5 " alt="Ronaldo Elastico">
+                        <img src="/portfolio/PICS/ronaldo.jpg" class="card-img-top pt-3 pb-5 " alt="Ronaldo Elastico">
                         <div class="card-body">
                             <h5 class="card-title">Elastico</h5>
                             <p class="card-text">Quickly push the ball to one side with the outside of your foot and
